# multi-agent-video-system

./: .env.example  .gitignore  API_CLI_MIGRATION_SUMMARY.md  API_DOCUMENTATION.md  API_SIMPLIFICATION_SUMMARY.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_HANDLING_SUMMARY.md  README.md  REAL_VIDEO_GENERATION_SUMMARY.md  SESSION_MANAGEMENT_FIXES.md  TASK_10_PERFORMANCE_VALIDATION_SUMMARY.md  TASK_14_VALIDATION_SUMMARY.md  TASK_15_FUNCTIONALITY_PRESERVATION_SUMMARY.md  TASK_16_TEST_UPDATES_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_6_TESTING_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_9_CLEANUP_SUMMARY.md  adk_commands_verification.md  debug_import.py  demo_cli_api.py  demo_concurrent_processing.py  demo_error_handling.py  demo_real_video_generation.py  demo_video_generation.py  docker-compose.yml  file_list.txt  functionality_preservation_report.txt  initialize_system.py  migration_cli.py  performance_validation.py  performance_validation_simplified.py  performance_validation_simplified_report.json  pyproject.toml  rrr.txt  run_canonical_tests.py  setup_config.py  test_adk_agent_discovery.py  test_adk_commands.py  (+48 more)
backup_original_implementation/: agent.py  api.py  orchestration_tools.py
data/: .migration_completed
deployment/: README.md  deploy.py  docker_deploy.py  grant_permissions.sh  run.py  test_deployment.py  validate_config.py
eval/: EVALUATION_SUMMARY.md  test_eval.py
eval/data/: conversation.test.json  test_config.json
output/: video_964c35df.json  video_c9072b78.json
src/: __init__.py
src/video_system/: __init__.py
sub_agents/: __init__.py
sub_agents/asset_sourcing/: __init__.py  agent.py  prompts.py
sub_agents/audio/: __init__.py  agent.py  prompts.py
sub_agents/image_generation/: __init__.py  agent.py  prompts.py
sub_agents/research/: __init__.py  agent.py  prompts.py
test_sessions/: 1a3b2b1b-7c30-4057-b809-4063c339860a.json
tests/: test_api_integration.py  test_asset_sourcing_agent.py  test_audio_agent.py  test_cli_integration.py  test_concurrent_processing.py  test_config_validation.py  test_deployment.py  test_error_handling.py  test_image_generation_agent.py  test_models.py  test_orchestration_integration.py  test_research_agent.py  test_session_management.py  test_story_agent.py  test_video_assembly_agent.py
utils/: image_utils.py
video_system/: __init__.py  agent.py  api.py  cli.py  orchestration_tools.py  prompts.py
video_system_old/: __init__.py  agent.py  api.py  cli.py  prompts.py
(+106 files in other folders)
